src/test/ui/chalkify/lower_env2.stderr
error: program clause dump
  --> $DIR/lower_env2.rs:6:1
   |
LL | #[rustc_dump_program_clauses]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<'a, T> { FromEnv(T: Foo) :- FromEnv(S<'a, T>). }
   = note: forall<'a, T> { TypeOutlives(T: 'a) :- FromEnv(S<'a, T>). }
   = note: forall<'a, T> { WellFormed(S<'a, T>) :- WellFormed(T: Foo), TypeOutlives(T: 'a). }

error: program clause dump
  --> $DIR/lower_env2.rs:11:1
   |
LL | #[rustc_dump_env_program_clauses]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<'a, T> { FromEnv(T: Foo) :- FromEnv(S<'a, T>). }
   = note: forall<'a, T> { TypeOutlives(T: 'a) :- FromEnv(S<'a, T>). }
   = note: forall<Self> { Implemented(Self: Foo) :- FromEnv(Self: Foo). }
   = note: forall<Self> { Implemented(Self: std::marker::Sized) :- FromEnv(Self: std::marker::Sized). }

error: aborting due to 2 previous errors

